# AMIR

./: .gitignore  LICENSE  README.md  default.json  package.json
src/: frontHandler.mjs  frontUtil.mjs  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
