[package]
name = "amir"
version = "1.0.0"
description = "Auto Mod Installer written Rust"
authors = ["keik1215"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "amir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
directories = "6.0.0"
reqwest = { version = "0.12.12", features = ["stream"] }
rand = "0.9.0"
zip = "2.2.2"
futures-util = "0.3.31"
chrono = "0.4.39"
